--- a/Kursova/EducationProgressForms/educationprogressmainwindow.ui
+++ b/Kursova/EducationProgressForms/educationprogressmainwindow.ui
@@ -37,8 +37,8 @@
         <rect>
          <x>0</x>
          <y>0</y>
-         <width>216</width>
-         <height>456</height>
+         <width>221</width>
+         <height>444</height>
         </rect>
        </property>
        <property name="sizePolicy">
@@ -227,8 +227,20 @@
           </sizepolicy>
          </property>
          <layout class="QHBoxLayout" name="horizontalLayout_4">
+          <property name="leftMargin">
+           <number>0</number>
+          </property>
+          <property name="topMargin">
+           <number>0</number>
+          </property>
+          <property name="rightMargin">
+           <number>0</number>
+          </property>
+          <property name="bottomMargin">
+           <number>0</number>
+          </property>
           <item>
-           <widget class="QTableView" name="tableView"/>
+           <layout class="QGridLayout" name="Table"/>
           </item>
          </layout>
         </widget>
@@ -302,7 +314,7 @@
      <x>0</x>
      <y>0</y>
      <width>975</width>
-     <height>20</height>
+     <height>25</height>
     </rect>
    </property>
   </widget>
