--- a/Kursova/EducationProgressForms/InputForms/markinputform.ui
+++ b/Kursova/EducationProgressForms/InputForms/markinputform.ui
@@ -52,6 +52,12 @@
          </property>
          <item>
           <widget class="QLabel" name="label">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Maximum" vsizetype="Preferred">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
            <property name="text">
             <string>Студент</string>
            </property>
