--- a/Kursova/EducationProgressForms/quickaccesspanelitem.ui
+++ b/Kursova/EducationProgressForms/quickaccesspanelitem.ui
@@ -71,7 +71,7 @@
          </size>
         </property>
         <property name="text">
-         <string/>
+         <string>&lt;-</string>
         </property>
        </widget>
       </item>
@@ -115,7 +115,7 @@
          </size>
         </property>
         <property name="text">
-         <string/>
+         <string>-</string>
         </property>
        </widget>
       </item>
